--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "license": "(GPL-3.0 or LPPL-1.3c)",
   "dependencies": {
     "browserfs": "^2.0.0",
-    "dvi2html": "0.0.2",
     "express": "^4.16.4",
     "fetch-readablestream": "^0.2.0",
+    "help": "^3.0.2",
     "pako": "^1.0.8",
     "web-streams-polyfill": "^1.3.2"
   },
@@ -26,6 +26,7 @@
     "gulp-filter": "^5.1.0",
     "gulp-rename": "^1.4.0",
     "gulp-s3-upload": "^1.7.3",
+    "regenerator-runtime": "^0.13.9",
     "string-replace-loader": "^2.1.1",
     "unzip": "^0.1.11",
     "webpack": "^4.29.5",
