--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "(GPL-3.0 or LPPL-1.3c)",
   "dependencies": {
     "browserfs": "^2.0.0",
+    "dvi2html": "^0.0.2",
     "express": "^4.16.4",
     "fetch-readablestream": "^0.2.0",
     "help": "^3.0.2",
+    "pako": "^2.0.4",
     "web-streams-polyfill": "^1.3.2"
   },
   "devDependencies": {
