--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "fetch-readablestream": "^0.2.0",
     "help": "^3.0.2",
     "pako": "^2.0.4",
+    "wasm-worker": "^0.4.0",
     "web-streams-polyfill": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
     "gulp": "^4.0.0",
