--- a/package.json
+++ b/package.json
@@ -10,30 +10,19 @@
   "license": "(GPL-3.0 or LPPL-1.3c)",
   "dependencies": {
     "browserfs": "^2.0.0",
-    "dvi2html": "^0.0.2",
-    "express": "^4.16.4",
     "fetch-readablestream": "^0.2.0",
-    "help": "^3.0.2",
     "pako": "^2.0.4",
-    "wasm-worker": "^0.4.0",
-    "web-streams-polyfill": "^1.3.2"
+    "stream-browserify": "^3.0.0",
+    "string-replace-loader": "^3.0.3",
+    "web-streams-polyfill": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
+    "@babel/core": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.0",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-env": "^7.16.0",
     "babel-loader": "^8.0.5",
-    "gulp": "^4.0.0",
-    "gulp-decompress": "^2.0.2",
-    "gulp-download2": "^1.0.2",
-    "gulp-filter": "^5.1.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-s3-upload": "^1.7.3",
-    "regenerator-runtime": "^0.13.9",
-    "string-replace-loader": "^2.1.1",
-    "unzip": "^0.1.11",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-stream": "^5.2.1"
+    "buffer": "^6.0.3",
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1"
   }
 }
